--- a/.github/workflows/build-client-prd.yml
+++ b/.github/workflows/build-client-prd.yml
@@ -1,35 +1,46 @@
 name: Build Client Prd
 
 on:
-  pull_request:
-    branches: [ "main" ]
+  push:
+    branches:
+      - main  # 원하는 브랜치로 변경 가능
 
 jobs:
-  build:
+  build-and-deploy:
     runs-on: ubuntu-latest
+
     steps:
-      - name: Checkout repository
+      - name: Checkout code
         uses: actions/checkout@v4
 
-      # 🟢 PR에서만 실행: Node.js 설치 (npm 사용)
-      - name: Install Node.js
-        if: github.event_name == 'pull_request'
-        uses: actions/setup-node@v3
-        with:
-          node-version: 20  # 안정적인 최신 LTS 버전
-          cache: 'npm'       # npm 캐싱
+      - name: Set up .env file
+        run: |
+          cat <<EOF > ./.env
+          ${{ secrets.ENV }}
+          EOF
 
-      # 🟢 PR에서만 실행: npm 캐시 활용
-      - name: Cache npm dependencies
-        if: github.event_name == 'pull_request'
-        uses: actions/cache@v3
-        with:
-          path: ~/.npm
-          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
-          restore-keys: |
-            ${{ runner.os }}-node-
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
 
-      # 🟢 PR에서만 실행: npm 의존성 설치
-      - name: Install dependencies
-        if: github.event_name == 'pull_request'
-        run: npm ci  # npm install 대신 npm ci 사용
+
+      - name: Login to DockerHub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_HUB_TOKEN }}
+
+      - name: Build and Push Docker Image
+        run: |
+          docker buildx build --platform linux/amd64 -t perasperaadastra250225/anycast-client:1.0.0 --push .
+
+      - name: Deploy to EC2 via SSH
+        uses: appleboy/ssh-action@v1.0.0
+        with:
+          host: ${{ secrets.EC2_HOST }}
+          username: ${{ secrets.EC2_USER }}
+          key: ${{ secrets.EC2_KEY }}
+          script: |
+            docker pull perasperaadastra250225/anycast-client:1.0.0
+            docker stop anycast-client || true
+            docker rm anycast-client || true
+            docker run -d -p 5010:5010 --restart unless-stopped --name anycast-client perasperaadastra250225/anycast-client:1.0.0
