bugfix : cicd 파이프라인에서 Env 가 제대로 init 되지 않은 문제 해결

--- a/.github/workflows/build-client-prd.yml
+++ b/.github/workflows/build-client-prd.yml
@@ -15,7 +15,7 @@ jobs:
 
       - name: Set up .env file
         run: |
-          cat <<EOF > ./.env
+          cat <<EOF > ./.env.production
           ${{ secrets.ENV }}
           EOF
 
