bugfix : cicd 파이프라인에서 Env 가 제대로 init 되지 않은 문제 해결

--- a/.github/workflows/build-client-prd.yml
+++ b/.github/workflows/build-client-prd.yml
@@ -13,11 +13,8 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Set up .env file
-        run: |
-          cat <<EOF > ./.env.production
-          ${{ secrets.ENV }}
-          EOF
+      - name: Set up .env.production
+        run: echo "${{ secrets.ENV }}" > .env.production
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
