feature : 도메인 연결

--- a/nginx.conf
+++ b/nginx.conf
@@ -65,7 +65,7 @@ http {
 
 server {
         listen 5010;
-        server_name 13.229.47.35;
+        server_name www.anycast.world;
         access_log  /var/log/nginx/host.access.log;
 
         # Serve React app
