refactor : 도메인 서버네임 수정

--- a/nginx.conf
+++ b/nginx.conf
@@ -64,8 +64,8 @@ http {
     include servers/*;
 
 server {
-        listen 5010;
-        server_name www.anycast.world;
+        listen 80;
+        server_name anycast.world www.anycast.world;
         access_log  /var/log/nginx/host.access.log;
 
         # Serve React app
