--- a/nginx.conf
+++ b/nginx.conf
@@ -12,72 +12,36 @@ http {
     include       mime.types;
     default_type  application/octet-stream;
 
-    #log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
-    #                  '$status $body_bytes_sent "$http_referer" '
-    #                  '"$http_user_agent" "$http_x_forwarded_for"';
-
     access_log  /var/log/nginx/access.log;
 
     sendfile        on;
-    #tcp_nopush     on;
-
-    #keepalive_timeout  0;
     keepalive_timeout  65;
 
     gzip  on;
     gzip_types text/plain application/json text/css application/javascript;
 
-    # another virtual host using mix of IP-, name-, and port-based configuration
-    #
-    #server {
-    #    listen       8000;
-    #    listen       somename:8080;
-    #    server_name  somename  alias  another.alias;
-
-    #    location / {
-    #        root   html;
-    #        index  index.html index.htm;
-    #    }
-    #}
-
-
-    # HTTPS server
-    #
-    #server {
-    #    listen       443 ssl;
-    #    server_name  localhost;
-
-    #    ssl_certificate      cert.pem;
-    #    ssl_certificate_key  cert.key;
-
-    #    ssl_session_cache    shared:SSL:1m;
-    #    ssl_session_timeout  5m;
-
-    #    ssl_ciphers  HIGH:!aNULL:!MD5;
-    #    ssl_prefer_server_ciphers  on;
-
-    #    location / {
-    #        root   html;
-    #        index  index.html index.htm;
-    #    }
-    #}
-    include servers/*;
-
-server {
-        listen 80;
+    # 🔒 HTTPS 서버
+    server {
+        listen 443 ssl;
         server_name anycast.world www.anycast.world;
-        access_log  /var/log/nginx/host.access.log;
 
-        # Serve React app
+        ssl_certificate     /etc/ssl/anycast/fullchain.pem;
+        ssl_certificate_key /etc/ssl/anycast/anycast.world-certificate.key;
+
+        ssl_protocols       TLSv1.2 TLSv1.3;
+        ssl_session_cache    shared:SSL:1m;
+        ssl_session_timeout  5m;
+        ssl_ciphers  HIGH:!aNULL:!MD5;
+        ssl_prefer_server_ciphers  on;
+
+        root /usr/share/nginx/html;
+        index index.html;
+
         location / {
-            root /usr/share/nginx/html;
-            index index.html;
             try_files $uri /index.html;
         }
 
-        # Proxy API requests to the backend
         location /streaming {
-
             rewrite ^/streaming(/.*)$ $1 break;
             proxy_pass http://13.214.147.245:8070;
             proxy_set_header Host $host;
@@ -85,10 +49,20 @@ server {
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         }
 
-        # Error pages
-        error_page   500 502 503 504  /500.html;
+        error_page 500 502 503 504 /500.html;
         location = /500.html {
-            root   /usr/share/nginx/html;
+            root /usr/share/nginx/html;
         }
     }
+
+    # 🌐 HTTP → HTTPS 리디렉션 서버
+    server {
+        listen 80;
+        server_name anycast.world www.anycast.world;
+
+        return 301 https://$host$request_uri;
+    }
+
+    # ✅ 다른 서버 블록 정의할 거면 여기 include
+    include servers/*;
 }
